[package]
name = "dir_ttl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
